# tts-ros2

./: .travis.yml  CONTRIBUTING.md  NOTICE  README.md
.github/workflows/: build_and_test.yml  build_and_test_release_latest.yml  release_latest.repos
tts/: CHANGELOG.rst  README.md  package.xml  setup.cfg  setup.py
tts/integration_test/: README.md  tts_integration.py
tts/launch/: tts.launch.py
tts/test/: test_integration.py  test_unit_polly.py  test_unit_synthesizer.py
tts/tts/: voicer.py
tts/tts/services/: amazonpolly.py  synthesizer.py
tts_interfaces/: CHANGELOG.rst  CMakeLists.txt  mapping_rules.yaml  package.xml
