<?xml version="1.0"?>
<package format="3">
  <name>tts</name>
  <version>2.0.0</version>
  <description>Package enabling a robot to speak with a human voice by providing a Text-To-Speech ROS service</description>
  <maintainer email="ros-contributions@amazon.com">AWS RoboMaker</maintainer>
  <license>Apache License 2.0</license>

  <author>AWS RoboMaker</author>
  <author email="ros-contributions@amazon.com">AWS RoboMaker</author>

  <exec_depend>launch_ros</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>tts_interfaces</exec_depend>
  <exec_depend>python3-boto3</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>launch_testing</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
